# Doodle-Jump

./: CMakeLists.txt  generatePlats.cpp  generatePlats.h  main.cpp  movePlats.cpp  movePlats.h  overlapnig_detector.cpp  overlapnig_detector.h  populatePlats.cpp  populatePlats.h  stru.h
